<resources>
    <string name="app_name">codingexercise</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_message">There is a network connectivity issue. Please check your
        mobile data or Wi-Fi settings.
    </string>

    <string name="login_error_title">Login Error</string>
    <string name="login_error_message">We are unable to sign you into the app. Please check that
        your username and password.
    </string>

    <string name="account_info_error_title">Account Info Error</string>
    <string name="account_info_error_message">We are having trouble getting your account info at this time. Please try again later.</string>

    <string name="login_screen_title">Login</string>
    <string name="account_info_screen_title">Account Information</string>

    <string name="user_name_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="login_button_text">Login</string>

    <string name="personal_information_title">Personal Information</string>
    <string name="name_label">Name: %1$s</string>
    <string name="title_label">Title: %1$s</string>
    <string name="motivation_label">Motivation: %1$s</string>
    <string name="email_label">Email: %1$s</string>
    <string name="phone_number_label">Phone Number: %1$s</string>

    <string name="timezone_preferences_title">Time Zone Preferences</string>
    <string name="time_zone_label">Time Zone: %1$s</string>

    <string name="notification_preferences_title">Notification Preferences</string>
    <string name="sms_notification_enabled_label">SMS Notification: %1$s</string>
    <string name="email_notification_enabled_label">Email Notification: %1$s</string>

    <string name ="logout_alert_title">Logout</string>
    <string name ="logout_alert_message">Are you sure that you want to logout of your account?</string>
    <string name ="logout_alert_positive_button_title">YES</string>
    <string name ="logout_alert_negative_button_title">NO</string>

    <string name ="logout_error_title">Logout Error</string>
    <string name ="logout_error_message">We are unable to log you out of your account of this time. Please try aagain later.</string>

</resources>
